<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- General -->
    <skip />
    <!-- Application name -->
    <string name="app_name">Last.fm Collage</string>

	<string name="settings">Settings</string>

    <string name="show_preferences">Configure</string>
    <string name="advanced_settings">Advanced</string>
    <string name="start_process">Make collage</string>
    <string name="image_kind">Image source</string>
    <string name="time_period">Time period</string>
    <string name="download_limit">Download limit</string>
    <string name="download_limit_summary">Maximal number of images to download</string>
    <string name="save_wallpaper">Set as wallpaper</string>
    <string name="cancel">Cancel</string>
    <string name="generate_now">Generate now</string>

    <string name="pref_enable_acra">Send crash reports</string>
    <string name="pref_acra_summary">Send anonymous crash reports</string>
</resources>
